# subrating

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: activity.h.5489BBB7E9DAD248.idx  convert.cc.EDDA6B975D634D60.idx  convert.h.FD1354267776B6C6.idx  file_utils.cc.01F05A931E48E69F.idx  file_utils.h.A7C38142BBF686DA.idx  header_window.cc.7F7DCE8C0D80EFEC.idx  header_window.h.2D2306ABE1B76777.idx  input_manager.cc.F3EEB84ADF5481DD.idx  input_manager.h.7ACEFF7EDEA2E69D.idx  key.h.7C2EF5BBFA9A33D5.idx  layout_manager.cc.AC133224F8627D66.idx  layout_manager.h.16B8E4C7187A6E72.idx  logo_win.h.296F82BD2E474231.idx  logo_window.cc.22B0701070DF6AE6.idx  logo_window.h.BDCAD9B1E6ADC67A.idx  main.cc.0AB9C6637B9922D8.idx  main.cc.43B9E7C83A589E01.idx  menu_items.h.61DBE461586A5B80.idx  menus_enumerations.h.ADAD6EB3D1D8C703.idx  point.h.34B6D82991C37181.idx  render.cc.423C259267168D10.idx  render.cc.494A7F602A9FA6C3.idx  render.h.815195FE836AC05F.idx  (+18 more)
include/models/: activity.h  subscriber.h  subscriber_enums.h
include/services/: convert.h  subscriber_manager.h
include/ui/: header_window.h  input_manager.h  key.h  layout_manager.h  logo_window.h  menus_enumerations.h  sub_form_window.h  ui.h  view_window.h  window.h  window_helpers.h  window_size.h
include/utils/: file_utils.h  point.h
src/: main.cc
src/models/: subscriber.cc
src/services/: convert.cc  subscriber_manager.cc
src/ui/: header_window.cc  input_manager.cc  layout_manager.cc  logo_window.cc  sub_form_window.cc  ui.cc  view_window.cc  window.cc  window_helpers.cc
src/utils/: file_utils.cc
